<resources>
    <string name="app_name">Corona Test Tracker Sunday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Welcome Page Strings-->


    <!--New Report Page Strings-->
    <string-array name="offices">
        <item>Linz-Stadtplatz</item>
        <item>Leonding-Meixnerkreuzung</item>
        <item>Parkplatz-Haidcenter</item>
    </string-array>
    <string name="welcome_title">Welcome</string>
    <string name="positiv_negativ">Positive/Negative</string>
    <string name="linz_stadtplatz">Linz-Stadtplatz</string>
    <string name="leonding_meixnerkreuzung">Leonding_Meixnerkreuzung</string>
    <string name="parkplatz_haid">Parkplatz-Haid</string>
    <string name="bt_new_report">New Report</string>
    <string name="bt_report_list">Report List</string>
    <string name="new_report_title">New Report</string>
    <string name="et_id">ID</string>
    <string name="et_date">Date</string>
    <string name="et_time">Time</string>
    <string name="switch_pos">Positive</string>
    <string name="bt_save">Save</string>
    <string name="report_list_title">Report List</string>
    <string name="bt_welcome">Welcome Page</string>

    <!--Report List Strings-->

</resources>